@@ -5,10 +5,12 @@ All notable changes to this project will be documented in this file.
 ### Added
 - Basic documentation.
 - Language specific downloads.
-- "-debug" command line argument used for debugging purposes.
+- "--debug" command line argument used for debugging purposes.
+- "--?" command line argument as help menu.
 
 ### Changed
 - Major cleanup / improved code.
+- New command arguments.
 
 ## [1.0.0.0] - 2016-05-20
 The application is finally in version 1! Everything seems to work fine so I decided to release it as stable.
